# spknetworkpoa

./: .gitignore  .replit  package-lock.json  package.json  replit.md
.github/workflows/: build-desktop.yml  desktop-release.yml
attached_assets/: Pasted-PoA-System-Deep-Dive-Optimizations-Improvements-1-Algor_1767074179197.txt  Pasted-VM697-8-Coframe-Replit-Enterprise-watcher-loaded-The-so_1767052361556.txt  Pasted-client-733-vite-connecting-client-745-WebSocket-connect_1767141982282.txt
client/src/: App.tsx
desktop-agent/: README.md  package.json  tsconfig.json
desktop-agent/scripts/: download-kubo.js
desktop-agent/src-tauri/: Cargo.toml
desktop-agent/src-tauri/src/: main.rs  notifications.rs
desktop-agent/webpack/: main.config.js  renderer.config.js
docs/: ARCHITECTURE.md  App_vs_Web_Strategy.md  Hive_Witness_Federation_Architecture.md  Ingress_Architecture_Swarm_vs_Gateway.md  LOCAL_IPFS_SETUP.md  MASTER_ARCHITECTURE_SPEC.md  Migration_Complexity_Analysis.md  P2P_CDN_BLUEPRINT.md  PoA_Architecture_and_Gameplan.md  README.md  SPK_NETWORK_2.0_POA.md  STORAGE_NODE_GUIDE.md  VALIDATOR_GUIDE.md  Validator_Ranking_and_Filtering.md  Validator_Ranking_and_Filters.md  Witness_Implementation_Guide.md
scripts/: ipfs-dev.sh  p2p-stress-test.ts
server/: index.ts  routes.ts  seed.ts  storage.ts
server/services/: encoding-orchestrator.ts  encoding-service.ts  hive-client.ts  hive-simulator.ts  ipfs-manager.ts  job-scheduler.ts  poa-crypto.ts  poa-engine.ts  spk-poa-client.ts  threespeak-service.ts  transcoding-service.ts
shared/: schema.ts
(+34 files in other folders)
